--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,74 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="assets/scripts/jquery-3.1.1.min.js"></script>
+  <script src="assets/scripts/jquery-3.2.1.js"></script>
+
 </head>
 <body>
+<!--商品详情界面 弹出框-->
+<div class="l-bg" style="display: none"></div>
+<!--加入购物车 弹出框-->
+<div class="add-shop-car" style="display: none;">
+  <div class="l-shop-top">
+    <div class="l-cancel" onclick="addCancel()">
+      X
+    </div>
+  </div>
+  <div class="l-shop-content">
+    <!-- 商品加入购物车成功提示 -->
+    <div class="l-prompt-title">
+      <div class="l-success"></div>
+      <div class="l-adds">
+        <p>加入购物车成功！</p>
+      </div>
+    </div>
+    <p class="l-shop-count">
+      购物车中共
+      <em>1</em>
+      件商品 | 商品小计
+      <em>￥19.90</em>
+    </p>
+    <div class="l-shop-buy">
+      <div class="l-fr-buy">
+        <a href="javascript:void(0);" class="sure-btn" role="button" title="点击此按钮，到下一步确认购买信息">
+          继续购物
+        </a>
+      </div>
+      <div class="l-fr-add">
+        <a href="#" class="sure-btn" title="加入购物车" role="button">
+          去结算
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+<!--收藏 弹出框-->
+<div class="l-goods-follow" style="display: none;">
+  <div class="l-shop-top">
+    <div class="l-cancel" onclick="folCancel()">
+      X
+    </div>
+  </div>
+  <div class="l-follow-content">
+    <!-- 商品加入购物车成功提示 -->
+    <div class="l-follow-prompt">
+      <div class="l-success"></div>
+      <div class="l-adds">
+        <p>已收藏过该商品！</p>
+      </div>
+    </div>
+    <div class="l-shop-buy">
+      <div class="l-fr-fow">
+        <a href="javascript:void(0);" class="sure-btn" title="加入购物车" role="button">
+          确认
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
 <homepage-head></homepage-head>
 </body>
+<script src="assets/scripts/product-details.component.js"></script>
 </html>
