--- a/src/index.html
+++ b/src/index.html
@@ -77,4 +77,5 @@
 <homepage-head></homepage-head>
 </body>
 <script src="assets/scripts/product-details.component.js"></script>
+<script src="assets/scripts/ad-details.component.js"></script>
 </html>
