--- a/src/index.html
+++ b/src/index.html
@@ -73,9 +73,26 @@
     </div>
   </div>
 </div>
+<!-- 删除收货人信息 -->
+<div class="l-delete-address" style="display: none;">
+  <div class="l-shop-top">
+    <div class="l-delAddress-title">删除收货人地址</div>
+    <div class="l-cancel" onclick="delAddress()">
+      X
+    </div>
+  </div>
+  <div class="l-delAddress-button">
+    <div class="l-addr-formitem">
+      <button id="l-addr-sure" class="btn btn-success" type="button">确定</button>
+      <button id="l-addr-cancel" class="btn btn-default" type="button">取消</button>
+    </div>
+  </div>
+</div>
+
 
 <homepage-head></homepage-head>
 </body>
-<script src="assets/scripts/product-details.component.js"></script>
-<script src="assets/scripts/ad-details.component.js"></script>
+<script src="assets/scripts/ProductDetailsComponent.js"></script>
+<script src="assets/scripts/AdDetailsComponent.js"></script>
+<script src="assets/scripts/MineComponent.js"></script>
 </html>
