--- a/src/index.html
+++ b/src/index.html
@@ -12,34 +12,7 @@
 
 </head>
 <body>
-<!--商品详情界面 弹出框-->
-<div class="l-bg" style="display: none"></div>
-<!--收藏 弹出框-->
-<!--<div class="l-goods-follow" style="display: none;">
-  <div class="l-shop-top">
-    <div class="l-cancel" onclick="folCancel()">
-      X
-    </div>
-  </div>
-  <div class="l-follow-content">
-    &lt;!&ndash; 商品加入购物车成功提示 &ndash;&gt;
-    <div class="l-follow-prompt">
-      <div class="l-success"></div>
-      <div class="l-adds">
-        <p>已收藏过该商品！</p>
-      </div>
-    </div>
-    <div class="l-shop-buy">
-      <div class="l-fr-fow">
-        <a href="javascript:void(0);" class="sure-btn" title="加入购物车" role="button">
-          确认
-        </a>
-      </div>
-    </div>
-  </div>
-</div>-->
 <app-root></app-root>
 </body>
-<script src="assets/scripts/ProductDetailsComponent.js"></script>
-<script src="assets/scripts/AdDetailsComponent.js"></script>
+<script type="text/javascript" src="assets/scripts/ProductDetailsComponent.js"></script>
 </html>
